--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Portfolio Website in HTML CSS JS</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -15,11 +15,11 @@
     <header class="header">
         <a href="#" class="logo">Portfolio.</a>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Skills</a>
-            <a href="#">Portfolio</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#" class="active">Home</a>
+            <a href="#" class="active">Skills</a>
+            <a href="#" class="active">Portfolio</a>
+            <a href="#" class="active">About</a>
+            <a href="#" class="active">Contact</a>
 
             <div class="toggle">
                 <i class='bx bx-moon toggle-icon'></i>
@@ -27,7 +27,21 @@
         
         </nav>
     </header>
+    <section class="home">
+        <div class="home-content">
+            <h3>Hello, I am</h3>
+            <h1>Hugo Goncalves</h1>
+            <p>Versatile professional with 8 years of experience in electrical systems, computer technology, and mechanics.</p>
+        </div>
 
+        <div class="social-media">
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+            <a href="#"><i class='bx bxl-instagram' ></i></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </div>
+
+    </section>
     <script src="script.js"></script>
 </body>
 
